ingress_rules/ceph-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  rules:
  - host: ceph.techlabenterprises.com
    http:
      paths:
      - path: /ceph-dashboard
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: https-dashboard
