ingress_rules/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #traefik.ingress.kubernetes.io/router.tls: "true"
  name: ingress-grafana
  namespace: prometheus-stack
spec:
  rules:
  - host: grafana.techlabenterprises.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
#  tls:
# - hosts:
#    - techlabenterprises.com
#    secretName: techlabenterprises.com.tls
status:
  loadBalancer: {}
