ingress_rules/ingress-kasten-io.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: ingress-kasten
  namespace: kasten-io
spec:
  rules:
  - host: techlabenterprises.com
    http:
      paths:
      - path: /k10/
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000
  tls:
  - hosts:
    - techlabenterprises.com
    secretName: techlabenterprises.com.tls
status:
  loadBalancer: {}
