ingress_rules/kasten-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasten-io
  namespace: kasten-io
spec:
  rules:
  - host: kasten.techlabenterprises.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000
