ingress_rules/postgresql-t6b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgresql
spec:
  rules:
  - host: postgresql.techlabenterprises.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql
            port:
              number: 5432
