ingress_rules/t6b-crm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgo-ingress
  namespace: postgres-operator
spec:
  rules:
  - host: postgres.techlabenterprises.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hippo-ha
            port:
              number: 5432
